; ModuleID = '/home/carl/AnghaBench/h2o/src/extr_ssl.c_encrypt_ticket_key_ptls.c'
source_filename = "/home/carl/AnghaBench/h2o/src/extr_ssl.c_encrypt_ticket_key_ptls.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ticket_key_callback = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32, i32*, i32)* @encrypt_ticket_key_ptls to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @encrypt_ticket_key_ptls(i32* %0, i32* %1, i32 %2, i32* %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  store i32 %4, i32* %10, align 4
  %11 = load i32, i32* %8, align 4
  %12 = icmp ne i32 %11, 0
  %13 = zext i1 %12 to i64
  %14 = select i1 %12, i32 (i32*, i32, i32)* @ptls_openssl_encrypt_ticket, i32 (i32*, i32, i32)* @ptls_openssl_decrypt_ticket
  %15 = load i32*, i32** %9, align 8
  %16 = load i32, i32* %10, align 4
  %17 = load i32, i32* @ticket_key_callback, align 4
  %18 = call i32 %14(i32* %15, i32 %16, i32 %17)
  ret i32 %18
}

declare dso_local i32 @ptls_openssl_encrypt_ticket(i32*, i32, i32) #1

declare dso_local i32 @ptls_openssl_decrypt_ticket(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
